chore: update configs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,23 +8,14 @@
   "files.readonlyInclude": {
     "**/routeTree.gen.ts": true
   },
-  "[javascript]": {
+  "[javascript][typescript]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
-  "[javascriptreact]": {
+  "[javascriptreact][typescriptreact]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
-  "[typescript]": {
-    "editor.defaultFormatter": "biomejs.biome"
-  },
-  "[typescriptreact]": {
-    "editor.defaultFormatter": "biomejs.biome"
-  },
-  "[json]": {
-    "editor.defaultFormatter": "biomejs.biome"
-  },
-  "[jsonc]": {
-    "editor.defaultFormatter": "biomejs.biome"
+  "[json][jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[css]": {
     "editor.defaultFormatter": "biomejs.biome"
