--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,7 @@
       "**/vite.config.js",
       "!**/src/routeTree.gen.ts",
       "!src/components/ui/**/*",
-      "!**/app.css"
+      "!**/styles.css"
     ]
   },
   "formatter": {
